[gd_scene load_steps=10 format=3 uid="uid://q30vj0xjebnw"]

[ext_resource type="Script" path="res://Menu/credits.gd" id="1_uaikn"]
[ext_resource type="Theme" uid="uid://bc5thnpey1oaf" path="res://Menu/maintheme.tres" id="2_srpov"]
[ext_resource type="Texture2D" uid="uid://dtrccarcuo0ru" path="res://Menu/HODAG.png" id="3_uyp8q"]
[ext_resource type="FontFile" uid="uid://hx7lj8hkkm5" path="res://Font/Compacta Bold.otf" id="4_f813e"]
[ext_resource type="PackedScene" uid="uid://ccd5jmrg2q1qn" path="res://Menu/screen_fade.tscn" id="5_i3qc8"]
[ext_resource type="PackedScene" uid="uid://dxvxfb3d53etd" path="res://Menu/screen_fade_out.tscn" id="6_p1nve"]

[sub_resource type="Theme" id="Theme_cvae8"]
default_font = ExtResource("4_f813e")
default_font_size = 25

[sub_resource type="Theme" id="Theme_7r2bi"]
default_font = ExtResource("4_f813e")
default_font_size = 25

[sub_resource type="Theme" id="Theme_3icvk"]
default_font = ExtResource("4_f813e")
default_font_size = 14

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uaikn")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CreditsRoll" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -213.0
offset_right = 219.0
offset_bottom = 1199.0
grow_horizontal = 2
theme = ExtResource("2_srpov")

[node name="Label7" type="Label" parent="CreditsRoll"]
offset_right = 432.0
offset_bottom = 315.0
theme = SubResource("Theme_cvae8")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "








"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsRoll"]
clip_contents = true
custom_minimum_size = Vector2(0.106, 0.061)
offset_top = 319.0
offset_right = 432.0
offset_bottom = 562.0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CreditsRoll/VBoxContainer"]
custom_minimum_size = Vector2(432, 243)
offset_right = 432.0
offset_bottom = 243.0
texture = ExtResource("3_uyp8q")
ignore_texture_size = true

[node name="Label" type="Label" parent="CreditsRoll"]
offset_top = 566.0
offset_right = 432.0
offset_bottom = 811.0
theme = SubResource("Theme_7r2bi")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Concept...............................Logan Dalke    
Programming......................Logan Dalke
Environment Art..................Logan Dalke
Music...................................Logan Dalke
Sounds and mixing...............Logan Dalke
Logo.................................Breanna Dalke

"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="CreditsRoll"]
offset_top = 815.0
offset_right = 432.0
offset_bottom = 885.0
theme = SubResource("Theme_cvae8")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Other Sound Attribution
Layered Gunshot 5.wav.................Xenonn
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="CreditsRoll"]
offset_top = 889.0
offset_right = 432.0
offset_bottom = 933.0
theme = SubResource("Theme_3icvk")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "https://freesound.org/s/128299/
License: Creative Commons 0
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label5" type="Label" parent="CreditsRoll"]
offset_top = 937.0
offset_right = 432.0
offset_bottom = 972.0
theme = SubResource("Theme_cvae8")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "001.wav.......................................gevaroy"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label4" type="Label" parent="CreditsRoll"]
offset_top = 976.0
offset_right = 432.0
offset_bottom = 1020.0
theme = SubResource("Theme_3icvk")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "https://freesound.org/s/173560
License: Creative Commons 0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label6" type="Label" parent="CreditsRoll"]
offset_top = 1024.0
offset_right = 432.0
offset_bottom = 1199.0
theme = SubResource("Theme_cvae8")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "



Thank you for playing!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ScreenFade" parent="." instance=ExtResource("5_i3qc8")]

[node name="ScreenFadeOut" parent="." instance=ExtResource("6_p1nve")]
